Changing BATS branch from gocli-bats to master
[#152726607](https://www.pivotaltracker.com/story/show/152726607)

Signed-off-by: David Ansari <david.ansari@gmx.de>

--- a/ci/bats/iaas/aws/pipeline.yml
+++ b/ci/bats/iaas/aws/pipeline.yml
@@ -92,7 +92,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh.git
-      branch: gocli-bats
+      branch: master
   - name: environment
     type: pool
     source:
@@ -127,7 +127,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh-acceptance-tests.git
-      branch: gocli-bats
+      branch: master
   - name: bosh-deployment
     type: git
     source:
