rubocop: allow lines up to 120 in length
Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -8,6 +8,9 @@ AllCops:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Metrics/LineLength:
+  Max: 120
+
 Metrics/MethodLength:
   Max: 25
 
