Add rake task for describing database tables.
[#144061967](https://www.pivotaltracker.com/story/show/144061967)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 .vagrant
 .yardoc
 src/go/src/github.com/cloudfoundry/bosh-agent
+src/postgresql.dump.sql
+src/postgresql.tables.txt
 
 Checkfile
 TAGS
