Add ruby 2.1.2 to bosh-blobstore-client/Dockerfile
- This is to support 263 and 262 pipelines

[#152849538](https://www.pivotaltracker.com/story/show/152849538)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/docker/bosh-blobstore-client/Dockerfile
+++ b/ci/docker/bosh-blobstore-client/Dockerfile
@@ -32,6 +32,7 @@ RUN mkdir /tmp/ruby-install && \
     rm -rf /tmp/ruby-install
 
 # ruby
+RUN ruby-install ruby 2.1.2
 RUN ruby-install ruby 2.4.2
 
 # Bundler and BOSH CLI
