--- a/releases/index.yml
+++ b/releases/index.yml
@@ -569,6 +569,8 @@ builds:
     version: "262.2"
   e802a7e147e7fd70e7484fcbaaa65c4f85cd2191:
     version: "45"
+  e80a80d7-114e-4398-52b3-528932163e34:
+    version: 263.5.0
   e87ff8de-160c-4096-a29e-753edb103487:
     version: "242"
   e8cc700e-a776-40d4-86a9-60a59eafebfe:
