--- a/releases/index.yml
+++ b/releases/index.yml
@@ -283,6 +283,8 @@ builds:
     version: "87"
   7bfc2ae8-f9bd-4801-b116-c37261b31537:
     version: "255.11"
+  7caac4bd-e95a-41ca-4b1d-d598cb6091bf:
+    version: 262.5.0
   7cccb6b9-e265-4ea3-8136-e87f09c06dbc:
     version: "238"
   7ccf7897e726ffcd0609a4355034e7500e0b9992:
