Add Unmount/Detach Disk(s) steps
- Disk Manager now uses steps to detach and unmount
- Instance updater uses new steps directly
- Lots of Rubocop fixes
   - Added Trailing commas to multiline literals/argument lists
   (automatically via rubocop)

[#139870093](https://www.pivotaltracker.com/story/show/139870093)

Signed-off-by: Luan Santos <lsantos@pivotal.io>

--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -8,8 +8,17 @@ AllCops:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Style/ClassAndModuleChildren:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 120
+
+Metrics/ModuleLength:
+  Exclude: ['**/*_spec.rb']
 
 Metrics/MethodLength:
   Max: 25
@@ -17,3 +26,11 @@ Metrics/MethodLength:
 Metrics/BlockLength:
   Max: 25
   ExcludedMethods: ['describe', 'context']
+
+Style/TrailingCommaInLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInArguments:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
