Add DB TLS tests for mysql
- ssl_mode for mysql is default to verify_identity instead of verify_ca
- add CI job to test mysql in TLS mode

[#147717361](https://www.pivotaltracker.com/story/show/147717361)

Signed-off-by: Gaurab Dey <gdey@pivotal.io>
Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -358,7 +358,7 @@ jobs:
 
         on_failure:
           <<: *slack-alert
-          
+
   - name: integration-postgres-db-tls
     public: true
     serial: true
@@ -370,7 +370,7 @@ jobs:
         - get: bosh-cli
         - get: bosh-agent
       - aggregate:
-        - task: test-group-1
+        - task: postgres-tls
           privileged: true
           file: bosh-src/ci/tasks/test-integration-gocli.yml
           tags: ["bosh-integration-2"]
@@ -378,34 +378,31 @@ jobs:
             DB:           postgresql
             RUBY_VERSION: 2.4.2
             NUM_GROUPS:   24
-            GROUP:        1,4,7,10,13,16,19,22
+            GROUP:        1,4,7,10,13,16,19,22,3,6,9,12,15
             SHA2_MODE:    true
             DB_TLS:       true
-
-        - task: test-group-2
+        - task: mysql-tls
           privileged: true
-          file: bosh-src/ci/tasks/test-integration-gocli.yml
           tags: ["bosh-integration-5"]
-          params:
-            DB:           postgresql
-            RUBY_VERSION: 2.4.2
-            NUM_GROUPS:   24
-            GROUP:        2,5,8,11,14,17,20,23
-            SHA2_MODE:    true
-            DB_TLS:       true
-
-        - task: test-group-3
-          privileged: true
-          file: bosh-src/ci/tasks/test-integration-gocli.yml
-          tags: ["bosh-integration-9"]
-          params:
-            DB:           postgresql
-            RUBY_VERSION: 2.4.2
-            NUM_GROUPS:   24
-            GROUP:        3,6,9,12,15,18,21,24
-            SHA2_MODE:    true
-            DB_TLS:       true
-
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: bosh/main-mysql-5.7
+            inputs:
+            - name: bosh-src
+            - name: bosh-cli
+            - name: bosh-agent
+            run:
+              path: bosh-src/ci/tasks/test-integration-gocli.sh
+            params:
+              DB:           mysql
+              RUBY_VERSION: 2.4.2
+              NUM_GROUPS:   24
+              GROUP:        2,5,8,11,14,17,20,23,18,21,24
+              SHA2_MODE:    true
+              DB_TLS:       true
         on_failure:
           <<: *slack-alert
 
