--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -208,6 +208,21 @@ jobs:
         get_params:
           skip_download: true
 
+  - name: build-bosh-load-tests-garden
+    public: true
+    serial: true
+    plan:
+      - aggregate:
+        - get: bosh-src
+          trigger: true
+          passed:
+            - "build-bosh-garden"
+      - put: bosh-load-tests-garden
+        params:
+          build: "bosh-src/ci/docker/bosh-load-tests-garden"
+        get_params:
+          skip_download: true
+
   - name: build-main-ubuntu-chroot
     public: true
     serial: true
@@ -432,6 +447,14 @@ resources:
     type: docker-image
     source:
       repository: bosh/bosh-load-tests
+      email: ((dockerhub_email))
+      username: ((dockerhub_username))
+      password: ((dockerhub_password))
+
+  - name: bosh-load-tests-garden
+    type: docker-image
+    source:
+      repository: bosh/bosh-load-tests-garden
       email: ((dockerhub_email))
       username: ((dockerhub_username))
       password: ((dockerhub_password))
