Switch bosh-fuzz-tests to 262.x branch
[#153823875](https://www.pivotaltracker.com/story/show/153823875)

Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -718,7 +718,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry-incubator/bosh-fuzz-tests.git
-      branch: master
+      branch: 262.x
 
   - name: bosh-load-tests-workspace
     type: git
