--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -151,6 +151,10 @@ builds:
     version: 61f576fafb72e856ef4765f59ed5b387f40d892e
     blobstore_id: 35429e5b-7efc-48e7-a7a9-8bbb51d71458
     sha1: b72b42c9625f46ce0f9d4a2b6c71f592fa9b8ebb
+  6bf1a793f9eb00ad6b96e39cde2081377e48dc3d:
+    version: 6bf1a793f9eb00ad6b96e39cde2081377e48dc3d
+    blobstore_id: f1d0c065-e04a-42a6-77db-fa3b6671fe25
+    sha1: 23703ee16815c45781f1c00855dffdcdb81cd6e9
   6dcccf7116fbe40f63001dee8dbf61f53a6464ab:
     version: 6dcccf7116fbe40f63001dee8dbf61f53a6464ab
     blobstore_id: 8abea158-1e06-4f6b-bb1b-d3b0515430c5
