--- a/releases/index.yml
+++ b/releases/index.yml
@@ -209,6 +209,8 @@ builds:
     version: "12"
   5801ac09-3c64-46ba-a39e-3b55336e0036:
     version: "180"
+  589ad3d4-600f-4806-6e8d-90fbe90043e7:
+    version: 263.6.0
   5a691f4cca5237a2dcc09eb3b3fd95fe65f2c434:
     version: "90"
   5b2fac9f-7e26-4e03-a71a-083248a6d923:
