--- a/releases/index.yml
+++ b/releases/index.yml
@@ -385,6 +385,8 @@ builds:
     version: "100"
   a11c17b3-ad57-46d8-b782-849e70b5a444:
     version: "102"
+  a2a602e1-ef67-4fc5-6754-685dfced9b9a:
+    version: 262.6.0
   a3bcfc74-e2bc-4e47-a674-146879b32e60:
     version: "192"
   a3f393c4-e93c-4c7a-4bd7-9213dcc6d3a3:
