Add BRAT tests for director to connect to TLS enabled external DB
- Also removed no longer needed tests that checked if some
  legacy stemcells work with new NATS server. Only Kept one
  test because it should be enough.

[#153785594](https://www.pivotaltracker.com/story/show/153785594)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/tasks/test-brats-db-cleanup.yml
+++ b/ci/tasks/test-brats-db-cleanup.yml
@@ -4,16 +4,13 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: bosh/main-bosh-docker
+    repository: bosh/main
 
 inputs:
-  - name: bosh-src
-  - name: bosh-dns-release
-  - name: stemcell
-  - name: bosh-release
+- name: bosh-src
 
 run:
-  path: bosh-src/ci/tasks/test-brats.sh
+  path: bosh-src/ci/tasks/test-brats-db-cleanup.sh
 
 params:
   RDS_MYSQL_EXTERNAL_DB_HOST: replace-me
