--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -87,6 +87,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
 
       - task: test
         file: bosh-src/ci/tasks/test-unit.yml
@@ -102,6 +103,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-mysql-5.5
           privileged: true
@@ -163,6 +165,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-postgres-9.3
           privileged: true
@@ -278,6 +281,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-s3
           file: bosh-src/ci/tasks/test-s3-blobstore-client-integration.yml
@@ -304,6 +308,7 @@ jobs:
     plan:
       - { get: bosh-src, trigger: true }
       - { get: davcli, trigger: true }
+      - { get: every-sunday, trigger: true }
       - task: test
         privileged: true
         file: bosh-src/ci/tasks/test-blobstore-load.yml
@@ -320,6 +325,8 @@ jobs:
           trigger: true
         - get: bosh-cli
         - get: bosh-agent
+        - get: every-sunday
+          trigger: true
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -367,6 +374,8 @@ jobs:
           trigger: true
         - get: bosh-cli
         - get: bosh-agent
+        - get: every-sunday
+          trigger: true
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -411,6 +420,8 @@ jobs:
           trigger: true
         - get: bosh-cli
         - get: bosh-agent
+        - get: every-sunday
+          trigger: true
       - aggregate:
         - task: upgrade-with-postgres
           privileged: true
@@ -662,6 +673,8 @@ jobs:
           trigger: true
           passed:
             - candidate-release
+        - get: every-sunday
+          trigger: true
       - task: test-brats
         file: bosh-src/ci/tasks/test-brats.yml
         tags: ["worker-brats"]
@@ -764,6 +777,13 @@ resources:
     type: time
     source:
       interval: 5h
+
+  - name: every-sunday
+    type: time
+    source:
+      start: 1:00 PM
+      stop: 9:00 PM
+      days: [Sunday]
 
   - name: slack-alert
     type: slack-notification
