Add weekly time triggers for CI jobs
Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -84,6 +84,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
 
       - task: test
         file: bosh-src/ci/tasks/test-unit.yml
@@ -99,6 +100,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-mysql-5.5
           privileged: true
@@ -160,6 +162,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-postgres-9.3
           privileged: true
@@ -275,6 +278,7 @@ jobs:
     build_logs_to_retain: 250
     plan:
       - { get: bosh-src, trigger: true }
+      - { get: every-sunday, trigger: true }
       - task: test-s3
         file: bosh-src/ci/tasks/test-s3-blobstore-client-integration.yml
         params:
@@ -306,6 +310,7 @@ jobs:
     plan:
       - { get: bosh-src, trigger: true }
       - { get: davcli, trigger: true }
+      - { get: every-sunday, trigger: true }
       - task: test
         privileged: true
         file: bosh-src/ci/tasks/test-blobstore-load.yml
@@ -322,6 +327,7 @@ jobs:
           trigger: true
         - get: bosh-cli
         - get: bosh-agent
+        - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -369,6 +375,7 @@ jobs:
           trigger: true
         - get: bosh-cli
         - get: bosh-agent
+        - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -410,6 +417,7 @@ jobs:
     plan:
       - { get: bosh-src, trigger: true }
       - { get: bosh-agent, trigger: true }
+      - { get: every-sunday, trigger: true }
       - aggregate:
         - task: test-group-1
           privileged: true
@@ -454,6 +462,7 @@ jobs:
           trigger: true
         - get: bosh-cli
         - get: bosh-agent
+        - { get: every-sunday, trigger: true }
       - aggregate:
         - task: upgrade-with-postgres
           privileged: true
@@ -706,6 +715,7 @@ jobs:
           trigger: true
           passed:
             - candidate-release
+        - { get: every-sunday, trigger: true }
       - task: test-brats
         file: bosh-src/ci/tasks/test-brats.yml
         tags: ["worker-brats"]
@@ -761,6 +771,13 @@ resources:
     type: time
     source:
       interval: 15m
+
+  - name: every-sunday
+    type: time
+    source:
+      start: 1:00 PM
+      stop: 9:00 PM
+      days: [Sunday]
 
   - name: slack-alert
     type: slack-notification
