--- a/ci/tasks/test-brats.yml
+++ b/ci/tasks/test-brats.yml
@@ -28,7 +28,11 @@ params:
   GCP_MYSQL_EXTERNAL_DB_USER: replace-me
   GCP_MYSQL_EXTERNAL_DB_PASSWORD: replace-me
   GCP_MYSQL_EXTERNAL_DB_NAME: replace-me
+  GCP_MYSQL_EXTERNAL_DB_CLIENT_CERTIFICATE: replace-me
+  GCP_MYSQL_EXTERNAL_DB_CLIENT_PRIVATE_KEY: replace-me
   GCP_POSTGRES_EXTERNAL_DB_HOST: replace-me
   GCP_POSTGRES_EXTERNAL_DB_USER: replace-me
   GCP_POSTGRES_EXTERNAL_DB_PASSWORD: replace-me
   GCP_POSTGRES_EXTERNAL_DB_NAME: replace-me
+  GCP_POSTGRES_EXTERNAL_DB_CLIENT_CERTIFICATE: replace-me
+  GCP_POSTGRES_EXTERNAL_DB_CLIENT_PRIVATE_KEY: replace-me
