--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/op-enable-short-dns-addresses.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/op-enable-short-dns-addresses.yml
@@ -2,3 +2,7 @@
 - type: replace
   path: /features?/use_short_dns_addresses
   value: true
+
+- type: replace
+  path: /features?/use_dns_addresses
+  value: true
