Migrate db during bpm pre-start hook
--Migration need to be finished before we create the pid file, it also
depends on the db to be running

[#153189574](https://www.pivotaltracker.com/story/show/153189574)

Signed-off-by: Difan Zhao <dzhao@pivotal.io>

--- a/jobs/director/templates/bpm.yml
+++ b/jobs/director/templates/bpm.yml
@@ -4,6 +4,8 @@ processes:
   executable: /var/vcap/jobs/director/bin/director
   ephemeral_disk: true
   persistent_disk: true
+  hooks:
+    pre_start: /var/vcap/jobs/director/bin/bpm-pre-start
 
 - name: nginx
   executable:  /var/vcap/packages/nginx/sbin/nginx
