Add rubocop git hook to lint staged files
[#154486667](https://www.pivotaltracker.com/story/show/154486667)

Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/src/Gemfile
+++ b/src/Gemfile
@@ -47,6 +47,9 @@ group :development, :test do
   gem 'sinatra'
   gem 'sinatra-contrib'
 
+  gem 'rubocop'
+  gem 'rubocop-git'
+
   gem 'eventmachine', '~>1.2'
 
   # for director
