Fix bpm migration typos around `=<%=`
[#153189574](https://www.pivotaltracker.com/story/show/153189574)

Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/jobs/health_monitor/templates/bpm.yml
+++ b/jobs/health_monitor/templates/bpm.yml
@@ -6,15 +6,15 @@ processes:
   env:
     <% if_p('env.http_proxy') do |http_proxy| %>
     HTTP_PROXY: <%= http_proxy %>
-    http_proxy: =<%= http_proxy %>
+    http_proxy: <%= http_proxy %>
     <% end %>
     <% if_p('env.https_proxy') do |https_proxy| %>
-    HTTPS_PROXY: =<%= https_proxy %>
-    https_proxy: =<%= https_proxy %>
+    HTTPS_PROXY: <%= https_proxy %>
+    https_proxy: <%= https_proxy %>
     <% end %>
     <% if_p('env.no_proxy') do |no_proxy| %>
-    NO_PROXY: =<%= no_proxy %>
-    no_proxy: =<%= no_proxy %>
+    NO_PROXY: <%= no_proxy %>
+    no_proxy: <%= no_proxy %>
     <% end %>
     BUNDLE_GEMFILE: /var/vcap/packages/health_monitor/Gemfile
     GEM_HOME: /var/vcap/packages/health_monitor/gem_home/ruby/2.4.0
