--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -589,14 +589,7 @@ jobs:
         DB: postgresql
         LEGACY: false
       on_failure:
-        do:
-          - task: prep-slack-alert
-            file: bosh-src/ci/tasks/prep-slack-alert.yml
-          - put: slack-alert
-            params:
-              channel: ((slack_channel_name))
-              icon_url: http://cl.ly/image/3e1h0H3H2s0P/concourse-logo.png
-              text_file: slack-message/message
+        <<: *slack-alert
 
   - name: legacy-load-tests-postgres
     public: true
