Borrow prep-slack-alert from kubo
Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/ci/tasks/prep-slack-alert.yml
+++ b/ci/tasks/prep-slack-alert.yml
@@ -10,7 +10,7 @@ inputs:
 - name: bosh-src
 
 outputs:
-- name: slack-message
+- name: slack-notification
 
 run:
   path: bosh-src/ci/tasks/prep-slack-alert.sh
